# src/dto/UserDto/registerDto.ts
@@ -1,0 +1,6 @@
+export interface RegisterDto {
+  username: string;
+  email: string;
+  pin: string;
+  selectedImageId: number;
+}
